linkerd/networkPolicies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: kube-service-mesh-linkerd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
