linkerd/networkPolicies/service-1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-1-network-policy
  namespace: kube-service-mesh-linkerd
spec:
  podSelector:
    matchLabels:
      app: kube-service-mesh-service-1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: kube-service-mesh-main
    ports:
    - protocol: TCP
      port: 3000
